--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: langgraph-jupyter
+    container_name: rca_poc
     ports:
       - "8888:8888"
     volumes:
-      - ./notebooks:/workspace/notebooks
+      - .:/workspace # This mounts everything including notebooks
     environment:
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
     stdin_open: true
