--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ langchain-community==0.3.5
 # Google Gemini
 google-generativeai==0.8.3
 
+# ChromaDB
+chromadb==0.5.23
+langchain-chroma
+
 # Utils
 python-dotenv==1.0.1
 pydantic==2.9.2
@@ -19,3 +23,6 @@ ipykernel==6.29.5
 # Data
 pandas==2.2.3
 numpy>=1.24.0,<2.0.0
+
+jq
+streamlit
